--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
+                <configuration>
+                    <useModulePath>false</useModulePath> <!-- Important pour JDK 9+ -->
+                </configuration>
             </plugin>
+
 
             <!-- Plugin SonarQube -->
             <plugin>
