--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,15 @@
             <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
+             <dependencies>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.10.0</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
+
     </dependencies>
 
     <build>
