--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,21 @@
         <version>5.10.0</version>
         <scope>test</scope>
     </dependency>
+<!-- JUnit 5 API -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.10.2</version>
+        <scope>test</scope>
+    </dependency>
+
+    <!-- JUnit 5 Engine (nécessaire pour exécuter les tests) -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.10.2</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
     </dependencies>
