--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-                <!-- SonarQube -->
+        <!-- SonarQube -->
         <sonar.projectKey>my-devops-project</sonar.projectKey>
         <sonar.projectName>my-devops-project</sonar.projectName>
         <sonar.host.url>http://localhost:9000</sonar.host.url>
@@ -26,7 +26,6 @@
     </properties>
 
     <dependencies>
-        <!-- JUnit 5 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -39,30 +38,12 @@
             <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
-             <dependencies>
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <version>5.10.0</version>
-        <scope>test</scope>
-    </dependency>
-<!-- JUnit 5 API -->
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
-        <version>5.10.2</version>
-        <scope>test</scope>
-    </dependency>
-
-    <!-- JUnit 5 Engine (nécessaire pour exécuter les tests) -->
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.10.2</version>
-        <scope>test</scope>
-    </dependency>
-</dependencies>
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -83,10 +64,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <useModulePath>false</useModulePath> <!-- Important pour JDK 9+ -->
+                    <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
-
 
             <!-- Plugin SonarQube -->
             <plugin>
@@ -97,15 +77,16 @@
         </plugins>
     </build>
 
-    <!-- Configuration pour déploiement Nexus -->
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>Nexus Releases</name>
+            <url>http://localhost:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 
-<distributionManagement>
-    <repository>
-        <id>nexus</id>
-        <name>Nexus Releases</name>
-        <url>http://localhost:8081/repository/maven-releases/</url>
-    </repository>
-</distributionManagement>
+</project>
+
 
 
 
